private.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: private.simple
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: development.deciphernow.com
      http:
        paths:
        - backend:
            serviceName: private
            servicePort: 8443
          path: / #end with ingress
